# cyphal_ros_bridge

./: .gitmodules  CMakeLists.txt  README.md  package.xml
examples/: bat.json  deb_node.json  everything_at_once.json  wheels.json
libs/: README.md
msg/: HMILed.msg
src/: common.hpp  main.cpp  translators.hpp  types.hpp
src/node/: node.cpp  node.h
src/translators/: _cyphal_to_ros.hpp  _ros_to_cyphal.hpp  _services.hpp  _translate_msg.hpp  translators.hpp
srv/: CallHMIBeeper.srv  CallHMILed.srv
